--- a/Front_Hack/public/manifest.json
+++ b/Front_Hack/public/manifest.json
@@ -19,10 +19,11 @@
     
     },
     "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["contentScript.js"]
-      }
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "run_at": "document_end"
+    }
     ],
     "host_permissions": [
       "<all_urls>"
