Funciona todo menos la api

--- a/Front_Hack/public/manifest.json
+++ b/Front_Hack/public/manifest.json
@@ -13,17 +13,15 @@
     "scripting",
     "storage",
     "tabs",
-    "offscreen",
-    "http://*/",
-    "https://*/"
+    "offscreen"
   ],
+  "background": {
+    "service_worker": "background.js"
+  },
   "icons": {
     "128": "icon.png"
   },
   "host_permissions": [
     "<all_urls>"
-  ],
-  "background": {
-    "service_worker": "background.js"
-  }
+  ]
 }
